tests/pos/i21749.scala
//> using options -Xfatal-warnings -no-indent

object Test {
  1 match {
    case 1 =>
      case class Test(name: String)
      Nil
  }
}
